--- a/SPRINGBOOT/pom.xml
+++ b/SPRINGBOOT/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ceduk</groupId>
-	<artifactId>prueba</artifactId>
+	<artifactId>ceduk</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>prueba</name>
 	<description>Probar conexion postgresql</description>
@@ -46,6 +46,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
